# Executioner

./: .env.example  .gitignore  AGENTS.CLI1.md  AGENTS.CLI2.md  AGENTS.md  PROJECT_STATUS.md  README.md  build_project.bat  generate_project.bat
.agents/skills/build-run-verify/: SKILL.md
.agents/skills/frontend-debug/: SKILL.md
backend/: CMakeLists.txt
backend/include/: api_models.hpp  audio_config.hpp  audio_service.hpp  music_service.hpp  music_service_host.hpp  router.hpp
backend/src/: audio_service.cpp  data_provider.cpp  main.cpp  music_service.cpp  music_service_host.cpp  router.cpp
frontend/: index_v2.html
frontend/js/: api.js  main.js  state.js
frontend/js/renderers/: access.js  audio.js  files.js  music.js  stats.js  tasks.js
